fix(lastUsedTab): align emojis to left

--- a/src/Components/EmojiPicker/EmojiButton/EmojiButton.scss
+++ b/src/Components/EmojiPicker/EmojiButton/EmojiButton.scss
@@ -1,12 +1,12 @@
 .picker-button {
   cursor: pointer;
-  display: inline-block;
   box-shadow: none;
   width: 100%;
   height: 100%;
   border: none;
   font-size: 16px;
   background: none;
+  display: flex;
   &:hover {
     background: #F0F2F5;
     border-radius: 3px;
