--- a/src/Components/EmojiPicker/EmojiSection/EmojiSection.scss
+++ b/src/Components/EmojiPicker/EmojiSection/EmojiSection.scss
@@ -9,8 +9,7 @@
     }
   }
   &--list {
-    width: max-content;
-    max-width: calc(100% - 14px);
+    width: calc(100% - 14px);
     position: relative;
     height: max-content;
     overflow: hidden;
